Render checkoxes for attachments in the way same to VSTO version

--- a/src/web/dialog.css
+++ b/src/web/dialog.css
@@ -29,7 +29,7 @@ fluent-card {
   color: red;
 }
 
-#attachment-and-others fluent-checkbox::part(label) {
+#attachment-and-others fluent-checkbox.warning::part(label) {
   color:red;
 }
 
