Set margin before and after divider

--- a/src/web/dialog.css
+++ b/src/web/dialog.css
@@ -5,6 +5,10 @@ fluent-card {
   padding-right: 10px;
 }
 
+fluent-divider {
+  margin: 1em 0;
+}
+
 .heading-container {
   display: flex;
   align-items: center;
