--- a/src/web/dialog.css
+++ b/src/web/dialog.css
@@ -1,3 +1,14 @@
+fluent-card {
+  margin-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+fluent-divider {
+  margin: 1em 0;
+}
+
 .card-container {
   display: flex;
   flex-direction: column;
@@ -8,6 +19,12 @@
   width: 100%;
 }
 
+.cards,
+.button-container {
+  padding-left: 20px; 
+  padding-right: 20px;
+}
+
 .cards {
   align-items: stretch;
   display: flex;
@@ -16,8 +33,12 @@
   overflow: auto;
 }
 
-.cards,
 .button-container {
-  padding-left: 20px; 
-  padding-right: 20px;
+  padding-bottom: 10px;
+  margin-top: 20px;
+  text-align: right;
+}
+
+#cancel-button {
+  margin-left: 10px;
 }
