Add support for delay delivery time
DelayDeliveryEnabled and DelayDeliverySeconds are added.

--- a/src/web/setting.css
+++ b/src/web/setting.css
@@ -50,14 +50,8 @@ fluent-text-area::part(control){
   height:100%;
 }
 
-#safeBccThreshold {
+fluent-number-field {
   margin-left: 10px;
-  margin-right: 10px;
-}
-
-#countSeconds {
-  margin-left: 10px;
-  margin-right: 10px;
 }
 
 /* fluent-tab:hover {
