--- a/src/web/confirm.css
+++ b/src/web/confirm.css
@@ -69,8 +69,9 @@ fluent-dialog .newly-added-domain-content strong {
 }
 
 fluent-card {
-  margin-top: 20px;
-  padding-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -80,7 +81,6 @@ fluent-card {
   flex-direction: column;
   height: 100%;
   left: 0;
-  position: fixed;
   top: 0;
   width: 100%;
 }
