--- a/src/web/dialog.css
+++ b/src/web/dialog.css
@@ -32,7 +32,7 @@ fluent-divider {
   bottom: 0;
   padding: 10px;
   text-align: center;
-  background: white;
+  background: transparent;
 }
 
 .dialog-body {
