dialog: specify background color directly
On new Outlook, html (body) element did not cover all of a dialog, so specifying "background"
to elements did not affect to the area not covered with html (body) element.
In order to resolve that, we need to specify width and height 100% after resize in order to
hide the original background color.

--- a/src/web/dialog.css
+++ b/src/web/dialog.css
@@ -25,6 +25,7 @@ fluent-divider {
   padding-left: 20px;
   padding-right: 20px;
   height: 100%;
+  background: var(--neutral-fill-secondary-rest);
 }
 
 .dialog-footer {
@@ -32,7 +33,7 @@ fluent-divider {
   bottom: 0;
   padding: 10px;
   text-align: center;
-  background: transparent;
+  background: var(--neutral-fill-secondary-rest);
 }
 
 .dialog-body {
