--- a/src/web/dialog.css
+++ b/src/web/dialog.css
@@ -15,6 +15,10 @@ fluent-divider {
   text-align: right;
 }
 
+.in-frame .button-container {
+  padding-bottom: 0px;
+}
+
 #cancel-button {
   margin-left: 10px;
 }
@@ -28,12 +32,23 @@ fluent-divider {
   background: var(--neutral-fill-secondary-rest);
 }
 
+.in-frame .dialog-content {
+  padding-left: 0px;
+  padding-right: 0px;
+  background: var(--neutralPrimarySurface);;
+}
+
 .dialog-footer {
   position: sticky;
   bottom: 0;
   padding: 10px;
   text-align: center;
   background: var(--neutral-fill-secondary-rest);
+}
+
+.in-frame .dialog-footer {
+  padding: 5px;
+  background: var(--neutralPrimarySurface);
 }
 
 .dialog-body {
