confirm.css: specify "height: auto" to fluent-card

--- a/src/web/confirm.css
+++ b/src/web/confirm.css
@@ -76,6 +76,7 @@ fluent-dialog .newly-added-domain-content strong {
 }
 
 fluent-card {
+  height: auto;
   margin-top: 10px;
   margin-bottom: 10px;
   padding-bottom: 10px;
