confirm.css: specify "height: auto" to fluent-card (#101)

--- a/src/web/confirm.css
+++ b/src/web/confirm.css
@@ -105,6 +105,7 @@ fluent-dialog .reconfirmation-content strong {
 }
 
 fluent-card {
+  height: auto;
   margin-top: 10px;
   margin-bottom: 10px;
   padding-bottom: 10px;
